--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,3 @@
-options:
-  logging: CLOUD_LOGGING_ONLY
-
 steps:
   # Step 1: Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
@@ -8,7 +5,7 @@ steps:
       [
         'build',
         '-t',
-        'asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:${SHORT_SHA}',
+        '${_REGION}-docker.pkg.dev/${_PROJECT_ID}/artifact-repo/${_APP_NAME}:${SHORT_SHA}',
         '.'
       ]
 
@@ -17,17 +14,17 @@ steps:
     args:
       [
         'push',
-        'asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:${SHORT_SHA}'
+        '${_REGION}-docker.pkg.dev/${_PROJECT_ID}/artifact-repo/${_APP_NAME}:${SHORT_SHA}'
       ]
 
-  # Step 3: Create startup script
+  # Step 3: Create startup script for the instance template
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
         echo "Creating startup script..."
-        cat > startup.sh << 'EOL'
+        cat > startup.sh << EOL
         #!/bin/bash
         
         # Install Docker
@@ -38,23 +35,23 @@ steps:
         # Wait for Docker to be ready
         sleep 5
         
-        # Pull and run the new Docker container, using the VM's service account for authentication
-        IMAGE='asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app'
-        IMAGE_TAG='${SHORT_SHA}'
-        docker pull "${IMAGE}:${IMAGE_TAG}"
+        # Pull and run the new Docker container using the instance's service account
+        IMAGE_PATH="${_REGION}-docker.pkg.dev/${_PROJECT_ID}/artifact-repo/${_APP_NAME}"
+        IMAGE_TAG="${SHORT_SHA}"
+        docker pull "${IMAGE_PATH}:${IMAGE_TAG}"
         
         # Stop and remove any old container gracefully
-        docker stop simple-web-app || true
-        docker rm simple-web-app || true
+        docker stop ${_APP_NAME} || true
+        docker rm ${_APP_NAME} || true
         
         # Run the new container
-        docker run -d --restart=always -p 8080:8080 --name simple-web-app "${IMAGE}:${IMAGE_TAG}"
+        docker run -d --restart=always -p 8080:8080 --name ${_APP_NAME} "${IMAGE_PATH}:${IMAGE_TAG}"
         
-        echo "Container deployment completed: $(date)" >> /var/log/startup-script.log
+        echo "Container deployment completed: \$(date)" >> /var/log/startup-script.log
         EOL
         chmod +x startup.sh
-        
-  # Step 4: Blue-Green Deployment
+
+  # Step 4: Blue-Green Deployment using MIGs
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     id: 'deploy-bluegreen'
     entrypoint: 'bash'
@@ -64,59 +61,58 @@ steps:
         set -euo pipefail
         
         echo "Starting blue-green deploy for ${SHORT_SHA}"
-        TEMPLATE="it-$(date +%s)"
-        GREEN_MIG="green-mig-$(date +%s)"
-        ZONE=asia-south1-a
-        PROJECT_ID=third-octagon-465311-r5
+        TEMPLATE_NAME="it-green-${SHORT_SHA}"
+        GREEN_MIG_NAME="green-mig-${SHORT_SHA}"
         
-        # Get the current active MIG by checking for a specific label
-        BLUE_MIG=$(gcloud compute instance-groups managed list --zones=$${ZONE} --format="value(name)" --filter="labels.status=blue") || true
+        # Get the current active (blue) MIG by checking for a specific label
+        BLUE_MIG_NAME=$(gcloud compute instance-groups managed list \
+          --zones=${_ZONE} \
+          --format="value(name)" \
+          --filter="labels.status=blue" || true)
         
-        echo "Current active MIG: $${BLUE_MIG}"
+        echo "Current active MIG: ${BLUE_MIG_NAME}"
         
         echo "Creating new instance template..."
-        gcloud compute instance-templates create $${TEMPLATE} \
+        gcloud compute instance-templates create ${TEMPLATE_NAME} \
           --metadata-from-file=startup-script=startup.sh \
-          --metadata=IMAGE='asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app',IMAGE_TAG='${SHORT_SHA}' \
-          --service-account='469028311605-compute@developer.gserviceaccount.com' \
+          --service-account="${_SERVICE_ACCOUNT}" \
           --scopes=https://www.googleapis.com/auth/cloud-platform \
-          --machine-type=e2-micro \
+          --machine-type=${_MACHINE_TYPE} \
           --image-family=debian-11 \
           --image-project=debian-cloud
         
         echo "Creating new MIG..."
-        gcloud compute instance-groups managed create $${GREEN_MIG} \
+        gcloud compute instance-groups managed create ${GREEN_MIG_NAME} \
           --base-instance-name=web-green \
-          --template=$${TEMPLATE} \
+          --template=${TEMPLATE_NAME} \
           --size=2 \
-          --zone=$${ZONE} \
+          --zone=${_ZONE} \
           --labels=status=green
         
         echo "Configuring named ports..."
-        gcloud compute instance-groups set-named-ports $${GREEN_MIG} \
+        gcloud compute instance-groups set-named-ports ${GREEN_MIG_NAME} \
           --named-ports=http:8080 \
-          --zone=$${ZONE}
+          --zone=${_ZONE}
         
         echo "Adding new MIG to backend service with 0% traffic..."
-        gcloud compute backend-services add-backend demo-backend \
-          --instance-group=$${GREEN_MIG} \
-          --instance-group-zone=$${ZONE} \
+        gcloud compute backend-services add-backend ${_BACKEND_SERVICE_NAME} \
+          --instance-group=${GREEN_MIG_NAME} \
+          --instance-group-zone=${_ZONE} \
           --global \
           --balancing-mode=UTILIZATION \
           --max-utilization=0.8 \
           --capacity-scaler=0.0
         
-        echo "Waiting for new instances to initialize and become healthy..."
-        # Poll for health status
-        for i in {1..24}; do  # Wait up to 4 minutes (24 * 10 seconds)
-          STATUS=$(gcloud compute backend-services get-health demo-backend --global \
+        echo "Waiting for new instances to become healthy..."
+        for i in {1..24}; do
+          STATUS=$(gcloud compute backend-services get-health ${_BACKEND_SERVICE_NAME} --global \
             --format='get(backends[0].healthStatus[].healthState)' || true)
           
           if [[ "$${STATUS}" == *"HEALTHY"* ]]; then
             echo "✓ New instances confirmed healthy."
             break
           fi
-          echo "Health check attempt $i: $${STATUS}. Retrying in 10 seconds..."
+          echo "Health check attempt $i: ${STATUS}. Retrying in 10 seconds..."
           sleep 10
         done
         
@@ -125,21 +121,21 @@ steps:
           exit 1
         fi
         
-        echo "Gradually increasing traffic to new instances..."
-        gcloud compute backend-services update-backend demo-backend \
-          --instance-group=$${GREEN_MIG} \
-          --instance-group-zone=$${ZONE} \
+        echo "Increasing traffic to new instances..."
+        gcloud compute backend-services update-backend ${_BACKEND_SERVICE_NAME} \
+          --instance-group=${GREEN_MIG_NAME} \
+          --instance-group-zone=${_ZONE} \
           --global \
           --capacity-scaler=1.0
           
         echo "Waiting for traffic to stabilize..."
         sleep 30
           
-        if [[ -n "$${BLUE_MIG}" ]]; then
-          echo "Draining connections from old MIG ($${BLUE_MIG})..."
-          gcloud compute backend-services update-backend demo-backend \
-            --instance-group=$${BLUE_MIG} \
-            --instance-group-zone=$${ZONE} \
+        if [[ -n "${BLUE_MIG_NAME}" ]]; then
+          echo "Draining connections from old MIG (${BLUE_MIG_NAME})..."
+          gcloud compute backend-services update-backend ${_BACKEND_SERVICE_NAME} \
+            --instance-group=${BLUE_MIG_NAME} \
+            --instance-group-zone=${_ZONE} \
             --global \
             --capacity-scaler=0.0
             
@@ -147,26 +143,35 @@ steps:
           sleep 30
         
           echo "Removing old MIG from backend..."
-          gcloud compute backend-services remove-backend demo-backend \
-            --instance-group=$${BLUE_MIG} \
-            --instance-group-zone=$${ZONE} \
+          gcloud compute backend-services remove-backend ${_BACKEND_SERVICE_NAME} \
+            --instance-group=${BLUE_MIG_NAME} \
+            --instance-group-zone=${_ZONE} \
             --global --quiet
         
-          echo "Deleting old MIG and template..."
-          gcloud compute instance-groups managed delete $${BLUE_MIG} \
-            --zone=$${ZONE} --quiet
+          echo "Deleting old MIG..."
+          gcloud compute instance-groups managed delete ${BLUE_MIG_NAME} \
+            --zone=${_ZONE} --quiet
             
-          OLD_TEMPLATE=$(gcloud compute instance-templates list --format="value(name)" --filter="name ~ ^it-[0-9]+" | grep -v "$${TEMPLATE}") || true
-          if [[ -n "$${OLD_TEMPLATE}" ]]; then
-            gcloud compute instance-templates delete $${OLD_TEMPLATE} --quiet || true
+          echo "Cleaning up old template..."
+          OLD_TEMPLATE_NAME=$(gcloud compute instance-templates list --format="value(name)" --filter="name ~ ^it-green-" | grep -v "${TEMPLATE_NAME}" || true)
+          if [[ -n "${OLD_TEMPLATE_NAME}" ]]; then
+            gcloud compute instance-templates delete ${OLD_TEMPLATE_NAME} --quiet || true
           fi
         
-          # Update labels for the next deployment
-          gcloud compute instance-groups managed update $${GREEN_MIG} \
-            --zone=$${ZONE} --update-labels=status=blue
-            
-          echo "✓ Deployment completed successfully"
+          # Update labels for the new MIG to be the 'blue' one for the next deployment
+          gcloud compute instance-groups managed update ${GREEN_MIG_NAME} \
+            --zone=${_ZONE} \
+            --update-labels=status=blue
         fi
         
-images:
-  - 'asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:${SHORT_SHA}'
+        echo "✓ Deployment completed successfully"
+        
+# --- You must define these custom variables for the pipeline to work correctly ---
+substitutions:
+  _PROJECT_ID: 'third-octagon-465311-r5'
+  _REGION: 'asia-south1'
+  _ZONE: 'asia-south1-a'
+  _APP_NAME: 'simple-web-app'
+  _BACKEND_SERVICE_NAME: 'demo-backend'
+  _MACHINE_TYPE: 'e2-micro'
+  _SERVICE_ACCOUNT: '469028311605-compute@developer.gserviceaccount.com'
