--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,9 @@
+options:
+  # This option is crucial to resolve the 'logsBucket' error when using a custom service account.
+  # Replace 'your-project-id' with your actual Google Cloud Project ID.
+  logsBucket: 'gs://third-octagon-465311-r5-cloudbuild-logs'
+  logging: CLOUD_LOGGING_ONLY
+
 steps:
   # Step 1: Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
@@ -5,7 +11,7 @@ steps:
       [
         'build',
         '-t',
-        '${_REGION}-docker.pkg.dev/${_PROJECT_ID}/artifact-repo/${_APP_NAME}:${SHORT_SHA}',
+        'asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:${SHORT_SHA}',
         '.'
       ]
 
@@ -14,44 +20,32 @@ steps:
     args:
       [
         'push',
-        '${_REGION}-docker.pkg.dev/${_PROJECT_ID}/artifact-repo/${_APP_NAME}:${SHORT_SHA}'
+        'asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:${SHORT_SHA}'
       ]
 
-  # Step 3: Create startup script for the instance template
+  # Step 3: Create startup script
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
         echo "Creating startup script..."
-        cat > startup.sh << EOL
+        cat > startup.sh << 'EOL'
         #!/bin/bash
-        
-        # Install Docker
         apt-get update -y && apt-get install -y docker.io > /dev/null 2>&1
         systemctl enable docker
         systemctl start docker
-        
-        # Wait for Docker to be ready
-        sleep 5
-        
-        # Pull and run the new Docker container using the instance's service account
-        IMAGE_PATH="${_REGION}-docker.pkg.dev/${_PROJECT_ID}/artifact-repo/${_APP_NAME}"
-        IMAGE_TAG="${SHORT_SHA}"
-        docker pull "${IMAGE_PATH}:${IMAGE_TAG}"
-        
-        # Stop and remove any old container gracefully
-        docker stop ${_APP_NAME} || true
-        docker rm ${_APP_NAME} || true
-        
-        # Run the new container
-        docker run -d --restart=always -p 8080:8080 --name ${_APP_NAME} "${IMAGE_PATH}:${IMAGE_TAG}"
-        
-        echo "Container deployment completed: \$(date)" >> /var/log/startup-script.log
+        sleep 10
+        gcloud auth configure-docker asia-south1-docker.pkg.dev --quiet
+        docker pull asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:${SHORT_SHA}
+        docker stop simple-web-app || true
+        docker rm simple-web-app || true
+        docker run -d --restart=always -p 8080:8080 --name simple-web-app asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:${SHORT_SHA}
+        echo "Container deployment completed: $(date)" >> /var/log/startup-script.log
         EOL
         chmod +x startup.sh
 
-  # Step 4: Blue-Green Deployment using MIGs
+  # Step 4: Blue-Green Deployment
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     id: 'deploy-bluegreen'
     entrypoint: 'bash'
@@ -59,119 +53,116 @@ steps:
       - '-c'
       - |
         set -euo pipefail
-        
         echo "Starting blue-green deploy for ${SHORT_SHA}"
-        TEMPLATE_NAME="it-green-${SHORT_SHA}"
-        GREEN_MIG_NAME="green-mig-${SHORT_SHA}"
-        
-        # Get the current active (blue) MIG by checking for a specific label
-        BLUE_MIG_NAME=$(gcloud compute instance-groups managed list \
-          --zones=${_ZONE} \
-          --format="value(name)" \
-          --filter="labels.status=blue" || true)
-        
-        echo "Current active MIG: ${BLUE_MIG_NAME}"
-        
+        TEMPLATE=it-${SHORT_SHA}
+        GREEN_MIG=green-mig-${SHORT_SHA}
+        ZONE=asia-south1-a
+
+        # Get current active MIG
+        BLUE_MIG=$(gcloud compute instance-groups managed list \
+          --zones=$${ZONE} \
+          --format="get(name)" | grep "green-mig-" | head -n 1) || true
+        echo "Current active MIG: $${BLUE_MIG}"
+
         echo "Creating new instance template..."
-        gcloud compute instance-templates create ${TEMPLATE_NAME} \
+        gcloud compute instance-templates create $${TEMPLATE} \
           --metadata-from-file=startup-script=startup.sh \
-          --service-account="${_SERVICE_ACCOUNT}" \
+          --metadata=IMAGE='asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app',IMAGE_TAG='${SHORT_SHA}' \
+          --service-account='469028311605-compute@developer.gserviceaccount.com' \
           --scopes=https://www.googleapis.com/auth/cloud-platform \
-          --machine-type=${_MACHINE_TYPE} \
+          --machine-type=e2-micro \
           --image-family=debian-11 \
           --image-project=debian-cloud
-        
+
         echo "Creating new MIG..."
-        gcloud compute instance-groups managed create ${GREEN_MIG_NAME} \
+        gcloud compute instance-groups managed create $${GREEN_MIG} \
           --base-instance-name=web-green \
-          --template=${TEMPLATE_NAME} \
+          --template=$${TEMPLATE} \
           --size=2 \
-          --zone=${_ZONE} \
-          --labels=status=green
-        
+          --zone=$${ZONE}
+
         echo "Configuring named ports..."
-        gcloud compute instance-groups set-named-ports ${GREEN_MIG_NAME} \
+        gcloud compute instance-groups set-named-ports $${GREEN_MIG} \
           --named-ports=http:8080 \
-          --zone=${_ZONE}
-        
-        echo "Adding new MIG to backend service with 0% traffic..."
-        gcloud compute backend-services add-backend ${_BACKEND_SERVICE_NAME} \
-          --instance-group=${GREEN_MIG_NAME} \
-          --instance-group-zone=${_ZONE} \
+          --zone=$${ZONE}
+
+        echo "Adding new MIG to backend service with initial 0% traffic..."
+        gcloud compute backend-services add-backend demo-backend \
+          --instance-group=$${GREEN_MIG} \
+          --instance-group-zone=$${ZONE} \
           --global \
           --balancing-mode=UTILIZATION \
           --max-utilization=0.8 \
           --capacity-scaler=0.0
-        
-        echo "Waiting for new instances to become healthy..."
-        for i in {1..24}; do
-          STATUS=$(gcloud compute backend-services get-health ${_BACKEND_SERVICE_NAME} --global \
-            --format='get(backends[0].healthStatus[].healthState)' || true)
+
+        echo "Waiting for new instances to initialize..."
+        sleep 60  # Allow instances to fully start
+
+        echo "Gradually increasing traffic to new instances..."
+        gcloud compute backend-services update-backend demo-backend \
+          --instance-group=$${GREEN_MIG} \
+          --instance-group-zone=$${ZONE} \
+          --global \
+          --capacity-scaler=0.5
+
+        echo "Waiting for health checks..."
+        for i in {1..12}; do  # 2 minute maximum wait
+          STATUS=$(gcloud compute backend-services get-health demo-backend --global \
+            --format='get(status.healthStatus[].healthState)' || true)
+          
+          echo "Health check attempt $i: $${STATUS}"
           
           if [[ "$${STATUS}" == *"HEALTHY"* ]]; then
-            echo "✓ New instances confirmed healthy."
-            break
+            echo "New instances becoming healthy, waiting for stability..."
+            sleep 30
+            
+            # Verify again after wait
+            STATUS=$(gcloud compute backend-services get-health demo-backend --global \
+              --format='get(status.healthStatus[].healthState)' || true)
+            
+            if [[ "$${STATUS}" == *"HEALTHY"* ]]; then
+              echo "✓ New instances confirmed healthy"
+              
+              # Increase to full traffic
+              gcloud compute backend-services update-backend demo-backend \
+                --instance-group=$${GREEN_MIG} \
+                --instance-group-zone=$${ZONE} \
+                --global \
+                --capacity-scaler=1.0
+
+              sleep 30  # Allow traffic to stabilize
+              
+              if [[ -n "$${BLUE_MIG}" ]]; then
+                echo "Draining connections from old MIG..."
+                gcloud compute backend-services update-backend demo-backend \
+                  --instance-group=$${BLUE_MIG} \
+                  --instance-group-zone=$${ZONE} \
+                  --global \
+                  --capacity-scaler=0.0
+
+                sleep 30  # Allow connections to drain
+
+                echo "Removing old MIG from backend..."
+                gcloud compute backend-services remove-backend demo-backend \
+                  --instance-group=$${BLUE_MIG} \
+                  --instance-group-zone=$${ZONE} \
+                  --global --quiet
+
+                echo "Deleting old MIG..."
+                gcloud compute instance-groups managed delete $${BLUE_MIG} \
+                  --zone=$${ZONE} --quiet
+
+                echo "Cleaning up old template..."
+                OLD_TEMPLATE="it-${BLUE_MIG#green-mig-}"
+                gcloud compute instance-templates delete $${OLD_TEMPLATE} --quiet || true
+              fi
+              
+              echo "✓ Deployment completed successfully"
+              break
+            fi
           fi
-          echo "Health check attempt $i: ${STATUS}. Retrying in 10 seconds..."
           sleep 10
         done
-        
-        if [[ "$${STATUS}" != *"HEALTHY"* ]]; then
-          echo "Error: New instances did not become healthy within the time limit."
-          exit 1
-        fi
-        
-        echo "Increasing traffic to new instances..."
-        gcloud compute backend-services update-backend ${_BACKEND_SERVICE_NAME} \
-          --instance-group=${GREEN_MIG_NAME} \
-          --instance-group-zone=${_ZONE} \
-          --global \
-          --capacity-scaler=1.0
-          
-        echo "Waiting for traffic to stabilize..."
-        sleep 30
-          
-        if [[ -n "${BLUE_MIG_NAME}" ]]; then
-          echo "Draining connections from old MIG (${BLUE_MIG_NAME})..."
-          gcloud compute backend-services update-backend ${_BACKEND_SERVICE_NAME} \
-            --instance-group=${BLUE_MIG_NAME} \
-            --instance-group-zone=${_ZONE} \
-            --global \
-            --capacity-scaler=0.0
-            
-          echo "Waiting for connections to drain..."
-          sleep 30
-        
-          echo "Removing old MIG from backend..."
-          gcloud compute backend-services remove-backend ${_BACKEND_SERVICE_NAME} \
-            --instance-group=${BLUE_MIG_NAME} \
-            --instance-group-zone=${_ZONE} \
-            --global --quiet
-        
-          echo "Deleting old MIG..."
-          gcloud compute instance-groups managed delete ${BLUE_MIG_NAME} \
-            --zone=${_ZONE} --quiet
-            
-          echo "Cleaning up old template..."
-          OLD_TEMPLATE_NAME=$(gcloud compute instance-templates list --format="value(name)" --filter="name ~ ^it-green-" | grep -v "${TEMPLATE_NAME}" || true)
-          if [[ -n "${OLD_TEMPLATE_NAME}" ]]; then
-            gcloud compute instance-templates delete ${OLD_TEMPLATE_NAME} --quiet || true
-          fi
-        
-          # Update labels for the new MIG to be the 'blue' one for the next deployment
-          gcloud compute instance-groups managed update ${GREEN_MIG_NAME} \
-            --zone=${_ZONE} \
-            --update-labels=status=blue
-        fi
-        
-        echo "✓ Deployment completed successfully"
-        
-# --- You must define these custom variables for the pipeline to work correctly ---
-substitutions:
-  _PROJECT_ID: 'third-octagon-465311-r5'
-  _REGION: 'asia-south1'
-  _ZONE: 'asia-south1-a'
-  _APP_NAME: 'simple-web-app'
-  _BACKEND_SERVICE_NAME: 'demo-backend'
-  _MACHINE_TYPE: 'e2-micro'
-  _SERVICE_ACCOUNT: '469028311605-compute@developer.gserviceaccount.com'
+
+images:
+  - 'asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:${SHORT_SHA}'
